# realman

./: Cargo.toml  LICENSE  README.md  function.md
examples/: README.md  lebai-lmg90.rs  nod.rs  udlr.rs
src/: config.rs  error.rs  io.rs  lib.rs  modbus.rs  motion.rs  realman.rs  transport.rs  types.rs
src/robot/: arm_state.rs  mod.rs  modbus.rs  motion.rs
src/traits/: arm_state.rs  io.rs  mod.rs  modbus.rs  motion.rs
tests/: motion.rs
