[package]
name = "realman"
version = "0.0.1"
edition = "2021"
authors = ["Leon <echo_ai@foxmail.com>"]
description = "realman robot Rust sdk"
license = "MIT"
repository = "https://github.com/EchoRust/realman"
keywords = ["realman", "robot"]

[dependencies]
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_repr = "0.1.19"
thiserror = "2.0.0"
